--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,191 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<style>
+			@font-face {
+				font-family: 'MinecraftTen';
+				src: url('/fonts/MinecraftTen.ttf');
+			}
+			:root {
+				/* https://www.realtimecolors.com/?colors=fbfdfe-010409-ffffff-01262d-05babd&fonts=Inter-Inter */
+				--text: #fcfdfe;
+				--background: #010409;
+				--primary: #ffffff;
+				--secondary: #01242b;
+				--accent: #05b8bb;
+				--highlight_dark: #000000;
+				--highlight_bright: #27ce40;
+
+				/* Colors RGB*/
+				--text_rgb: rgb(252, 253, 254);
+				--background_rgb: rgb(1, 4, 9);
+				--primary_rgb: rgb(255, 255, 255);
+				--secondary_rgb: rgb(1, 36, 43);
+				--accent_rgb: rgb(5, 184, 187);
+				--highlight_dark_rgb: rgb(0, 0, 0);
+				--highlight_bright_rgb: rgb(39, 206, 64);
+
+				/* Gradients */
+				--linearPrimarySecondary: linear-gradient(#ffffff, #01242b);
+				--linearPrimaryAccent: linear-gradient(#ffffff, #05b8bb);
+				--linearSecondaryAccent: linear-gradient(#01242b, #05b8bb);
+				--radialPrimarySecondary: radial-gradient(#ffffff, #01242b);
+				--radialPrimaryAccent: radial-gradient(#ffffff, #05b8bb);
+				--radialSecondaryAccent: radial-gradient(#01242b, #05b8bb);
+
+
+				--column-width: 42rem;
+				--column-margin-top: 4rem;
+			
+				--font-mono: 'sans-serif'; /* TODO: Setup monospace font */
+				font-family: 'Poppins', sans-serif;
+				font-size: 62.5%;
+				margin: 0;
+			}
+			
+			/*:global(body) {
+				margin: 0;
+				
+				
+				line-height: 1.5;
+				color: #8c8c8e;
+			}*/
+			
+			html {
+				background: linear-gradient(
+					159deg,
+					var(--primary-color) 0%,
+					var(--secondary-color) 80%,
+					var(--tertiary-color) 99%
+				);
+			}
+			body {
+				margin: 0;
+				padding: 0;
+				display: flex;
+				justify-content: center;
+				flex-direction: column;
+				align-items: flex-start; /* Align items to the start */
+				min-height: 100vh;
+				color: var(--text);
+				font-size: 1.6rem;
+			}
+			
+			body::before {
+				content: '';
+				width: 80vw;
+				height: 100vh;
+				position: absolute;
+				top: 0;
+				left: 0;
+				z-index: -1;
+				background: radial-gradient(
+					50% 50% at 50% 50%,
+					var(--pure-white) 0%,
+					rgba(255, 255, 255, 0) 100%
+				);
+				opacity: 0.05;
+			}
+
+			body > div {
+				max-width: 1080px;
+				width: 100%;
+				padding: 20px;
+				margin: 20px 0; /* Space between sections */
+				background-color: var(--background); /* Optional container background */
+				border-radius: 10px; /* Rounded corners */
+				box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+			}
+			
+			@media (max-width: 768px) {
+				body > div {
+					padding: 15px;
+				}
+			}
+
+			@media (max-width: 480px) {
+				body > div {
+					padding: 10px;
+				}
+			}
+			
+			::-webkit-scrollbar {
+				width: 1rem;
+				-webkit-appearance: none;
+				background: linear-gradient( 159deg, var(--primary-color) 0%, var(--secondary-color) 80%, var(--tertiary-color) 99% );
+			}
+			::-webkit-scrollbar-track {
+				border-radius: 10px;
+				background-color: transparent;
+			}
+			::-webkit-scrollbar-thumb {
+				background-color: #233140;
+				border-radius: 10px;
+				border: 0;
+			}
+			::-webkit-scrollbar-corner {
+				background: rgba(0,0,0,0);
+			}
+			::-webkit-scrollbar-track-piece {
+				background: rgba(0,0,0,0);
+			}
+			
+			p {
+				font-weight: 400;
+				line-height: 1.5;
+			}
+			
+			h1, h2, h3, h4, h5, h6, p > span {
+				margin: 0;
+				line-height: 1.5;
+				color: var(--text);
+			}
+			
+			h1 {
+			}
+			
+			h2 {
+				font-weight: 600;
+			}
+			
+			h3 {
+				font-weight: 600;
+			}
+			
+			a {
+				color: var(--accent);
+				text-decoration: none;
+				-webkit-transition: .4s ease-in-out;
+				transition: .4s ease-in-out;
+			}
+			
+			a > * {
+				color: var(--text);
+				text-decoration: none;
+			}
+			
+			a:hover {
+				color: var(--heading-color);
+				-webkit-transition: .4s ease-in-out;
+				transition: .4s ease-in-out;
+			}
+			
+			pre {
+				font-size: 16px;
+				font-family: var(--font-mono);
+				background-color: rgba(255, 255, 255, 0.45);
+				border-radius: 3px;
+				box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
+				padding: 0.5em;
+				overflow-x: auto;
+				color: var(--text);
+			}
+
+			/* Media query to Detect if the device is mobile or in super small window */
+			@media (pointer: coarse) or (orientation: portrait) or (max-width: 60em) {
+				/* TODO: Adapt stuff for mobile display */
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
