--- a/src/app.html
+++ b/src/app.html
@@ -40,7 +40,6 @@
 			--radialPrimaryAccent: radial-gradient(#ffffff, #05b8bb);
 			--radialSecondaryAccent: radial-gradient(#01242b, #05b8bb);
 
-
 			--column-width: 42rem;
 			--column-margin-top: 4rem;
 
@@ -73,42 +72,21 @@
 		body {
 			margin: 0;
 			padding: 0;
+			width: 100%;
 			display: flex;
 			justify-content: center;
 			flex-direction: column;
 			align-items: flex-start;
-			/* Align items to the start */
-			min-height: 100vh;
 			color: var(--text);
 			font-size: 1.6rem;
 			overflow-x: clip;
 		}
 
-		body::before {
-			content: '';
-			width: 80vw;
+		#app-root {
 			height: 100vh;
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: -1;
-			background: radial-gradient(50% 50% at 50% 50%,
-					var(--pure-white) 0%,
-					rgba(255, 255, 255, 0) 100%);
-			opacity: 0.05;
-		}
-
-		body>div {
-			max-width: 1080px;
 			width: 100%;
-			padding: 20px;
-			margin: 20px 0;
-			/* Space between sections */
-			background-color: var(--background);
-			/* Optional container background */
-			border-radius: 10px;
-			/* Rounded corners */
-			box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+			overflow-y: scroll;
+			scroll-snap-type: y proximity;
 		}
 
 		@media (max-width: 768px) {
@@ -265,7 +243,7 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
+	<div id="app-root">%sveltekit.body%</div>
 </body>
 
 </html>
