--- a/src/app.html
+++ b/src/app.html
@@ -85,11 +85,9 @@
 		#app-root {
 			height: 100vh;
 			width: 100%;
-			overflow-y: scroll;
-			scroll-snap-type: y proximity;
 		}
 
-		@media (max-width: 768px) {
+		/*@media (max-width: 768px) {
 			body>div {
 				padding: 15px;
 			}
@@ -99,7 +97,7 @@
 			body>div {
 				padding: 10px;
 			}
-		}
+		}*/
 
 		::-webkit-scrollbar {
 			width: 1rem;
